Simona Homework workshop day 2

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,30 @@ report.html
 chromedriver.exe
 log.html
 output.xml
+selenium-screenshot-9.png
+selenium-screenshot-7.png
+selenium-screenshot-5.png
+selenium-screenshot-1.png
+selenium-screenshot-12.png
+selenium-screenshot-8.png
+selenium-screenshot-42.png
+selenium-screenshot-40.png
+selenium-screenshot-39.png
+selenium-screenshot-37.png
+selenium-screenshot-38.png
+selenium-screenshot-36.png
+selenium-screenshot-35.png
+selenium-screenshot-4.png
+selenium-screenshot-32.png
+selenium-screenshot-34.png
+selenium-screenshot-11.png
+selenium-screenshot-15.png
+selenium-screenshot-16.png
+selenium-screenshot-18.png
+selenium-screenshot-13.png
+selenium-screenshot-31.png
+selenium-screenshot-43.png
+selenium-screenshot-3.png
+selenium-screenshot-29.png
+selenium-screenshot-28.png
+selenium-screenshot-30.png
